# inf1406-trab4

./: .gitignore  Cargo.toml  Dockerfile  README.md  Relatorio_trab4_FernandoSantos_YuriZoelBrasil.docx  Relatorio_trab4_FernandoSantos_YuriZoelBrasil.docx:Zone.Identifier  docker-compose.yml  mosquitto.conf
MONITOR-localhost-1883/: r-127.msg  r-139.msg  r-147.msg
SERVER_0-localhost-1883/: r-2.msg
src/client/: main.rs  mqtt_utils.rs
src/monitor/: heartbeat_handler.rs  main.rs  mqtt_utils.rs
src/pub/: main.rs
src/server/: external_communicator.rs  main.rs  mqtt_utils.rs  utils.rs  values_table_handler.rs
src/sub/: main.rs
