[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.2.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bin]]
name = "sub"
path = "src/sub/main.rs"

[[bin]]
name = "pub"
path = "src/pub/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "monitor"
path = "src/monitor/main.rs"